# goit-web-hw-08

./: .gitignore  pyproject.toml
task_1/: config.example.ini  models.py  search.py  seed.py
task_2/: config.example.ini  consumer.py  db.py  models.py  producer.py
