[project]
name = "web-hw-08"
version = "0.1.0"
description = ""
authors = [
    {name = "Oleh Matiukha",email = "olehmatiukha@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mongoengine (>=0.29.1,<0.30.0)",
    "pymongo (>=4.12.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
